# Algorithm-Of-Thoughts

./: .gitignore  README.md  examples.py  neural_search_example.py  openai.logs  pyproject.toml  requirements.txt  thought_cache_error.json
aot/: __init__.py  chatgpt.py  main.py  openai.py
prompts/: 1.txt  2.txt
